2011-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by p_michalczyk 
	* application-src/amstar.c: Add missing break statement.

2011-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	Replace semaphore by amsemaphore.
	* common-src/Makefile.am: Remove semaphore.*, add amsemaphore.*
	* common-src/amsemaphore-test.c: New copy of semaphore-test.c
	* common-src/amsemaphore.c: New copy of semaphore.c
	* common-src/amsemaphore.h: New copy of semaphore.h
	* common-src/semaphore-test.c: Removed file.
	* common-src/semaphore.c: Removed file.
	* common-src/semaphore.h: Removed file.
	* device-src/rait-device.c: s/semaphore_/amsemaphore_/g
	* xfer-src/element-glue.c: s/semaphore_/amsemaphore_/g
	* xfer-src/element-glue.h: s/semaphore_/amsemaphore_/g

2011-06-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Check holding file is in a holding directory.

2011-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: s/Witout/Without/

2011-06-21  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-client.conf.5.xml: Add amdump-server.
	* man/xml-source/amdump_client.8.xml: Fix doc.

2011-06-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Fix add_tapelabel call.

2011-06-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Correcly make label with meta and barcode

2011-06-20  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amrecover.8.xml: Document new settranslate command.
	* recover-src/amrecover.c: Add disk_tpath,
	* recover-src/amrecover.c (translate_octal): New function.
	* recover-src/amrecover.h: Add tpath to DIR_ITEM.
	* recover-src/display_commands.c: Set and use tpath.
	* recover-src/extract_list.c: Use tpath
	* recover-src/help.c: Add settranslate command.
	* recover-src/set_commands.c: Set and tpath.
	* recover-src/uparse.y: Parse settranslate command.
	* recover-src/uscan.l: Add SETTRANSLATE keyword.
